# PBI-Academy

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  render.yaml  vercel.json
app/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  constants.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/ai/: __init__.py
backend/app/api/v1/ai/endpoints/: __init__.py  analytics.py  evaluator.py  quiz_generator.py  tutor.py
backend/app/api/v1/endpoints/: auth.py  courses.py  gamification.py  live_sessions.py  messages.py  mock_exams.py  subscriptions.py  users.py
backend/app/api/websockets/: __init__.py  router.py
backend/app/api/websockets/handlers/: exam_timer.py  notifications.py  tutor_chat.py
backend/app/cache/: __init__.py  redis_client.py
backend/app/core/: exceptions.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  ai.py  base.py  course.py  gamification.py  live.py  message.py  mock_exam.py  subscription.py  user.py
backend/app/schemas/: __init__.py  ai.py  base.py  course.py  exam.py  gamification.py  message.py  user.py
backend/app/services/: course_content.py
backend/app/services/ai/: __init__.py  evaluator.py  llm_client.py  performance_analyzer.py
docs/: DEPLOYMENT.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
server/: .env.example  Dockerfile  (+4 more)
(+72 files in other folders)
